--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,2 @@
 PORT=4000
-MONGODB_URI=mongodb+srv://123balanca123:3tsi0TO76yzwR9EM@balanca.mxt1psj.mongodb.net/
-MONGODB_URI=mongodb+srv://123balanca123:3tsi0TO76yzwR9EM@cluster0.mxt1psj.mongodb.net/Balanca?retryWrites=true&w=majority&appName=Cluster0
-
+MONGODB_URI=mongodb+srv://123balanca123:3tsi0TO76yzwR9EM@balanca.mxt1psj.mongodb.net/Balanca?appName=Balanca
