--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGODB_URI=mongodb+srv://123balanca123:3tsi0TO76yzwR9EM@balanca.mxt1psj.mongodb.net/Balanca?appName=Balanca
+MONGODB_URI=mongodb+srv://123balanca123:SistemasEmbebidos123@balanca.mxt1psj.mongodb.net/Balanca?appName=Balanca
