--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.6",
+    "sweetalert2": "^11.26.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
